# rust-jni-template

./: Cargo.toml  README.md
.github/workflows/: build.yml
java/: pom.xml
java/src/main/java/palaiologos/example/: CleanerSingleton.java  Example.java  ExampleManagedObject.java  NativeLibrary.java
src/: lib.rs
