[package]
name = "rust-jni-template"
version = "1.0.0"
edition = "2021"
license = "CC0-1.0"

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"
debug-assertions = false
overflow-checks = false
debug = false

[dependencies]
jni = "0.20.0"

[lib]
crate-type = ["cdylib"]

[features]
unwind-stubs = []
